src/components/FeedbackSection/FeedbackSection.module.scss
@use "@/styles/variables" as *;

.feedbackSection {
  width: 100%;
  max-width: 1228px;
  padding: 60px 104px;
  border-radius: 50px;
  box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.5);
  background: #1b1d20;
  color: $white-color;
  border: 1px solid rgb(96, 80, 28);
  position: relative;
  overflow: hidden;
  margin-bottom: 180px;
  box-sizing: border-box;
}

.feedbackArrow {
  width: 71px;
  height: 53px;
  background-image: image-set(
    url(../../assets/images/sections/feedback/arrow-desc-1x.webp)
      type("image/webp") 1x,
    url(../../assets/images/sections/feedback/arrow-desc-2x.webp)
      type("image/webp") 2x,
    url(../../assets/images/sections/feedback/arrow-desc-1x.png)
      type("image/png") 1x,
    url(../../assets/images/sections/feedback/arrow-desc-2x.png)
      type("image/png") 2x
  );
  background-repeat: no-repeat;
  background-size: cover;
  position: absolute;
  top: 10%;
  left: 10%;

  @media (max-width: $breakpoint-tablet) {
    left: 10px;
    transform: rotate(305deg);
  }
}

.feedbackTitle {
  text-align: center;
  font-weight: 400;
  font-size: 1.875rem;
}

.feedbackContent {
  display: flex;
}

.feedbackImgContainer {
  background-image: image-set(
    url(../../assets/images/sections/feedback/circles-desc-1x.webp)
      type("image/webp") 1x,
    url(../../assets/images/sections/feedback/circles-desc-2x.webp)
      type("image/webp") 2x,
    url(../../assets/images/sections/feedback/circles-desc-1x.png)
      type("image/png") 1x,
    url(../../assets/images/sections/feedback/circles-desc-2x.png)
      type("image/png") 2x
  );
  background-repeat: no-repeat;
  background-size: contain;
  background-position-x: right;
  width: 680px;
  height: 480px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 42px;

  &:hover .feedbackImg {
    transform: scale(1.1);
  }
}

.feedbackImg {
  pointer-events: none;
  width: 100%;
  position: absolute;
  top: -168px;
  left: 96px;
  transition: transform $transition-speed $transition-style;
}

@media (max-width: $breakpoint-tablet) {
  .feedbackSection {
    padding: 60px 60px;
  }

  .feedbackImgContainer {
    right: -6dvw;
  }
}

